Adiciona seção de participantes com estilo ao card de atividade

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -39,6 +39,17 @@
         </form>
         <div id="message" class="hidden"></div>
       </section>
+
+      <!-- Dentro do template do card de atividade, adicione a seção de participantes -->
+      <div class="activity-card">
+        <!-- ...outros elementos do card... -->
+        <div class="participants-section">
+          <h4>Participantes</h4>
+          <ul class="participants-list">
+            <!-- Lista de participantes será preenchida pelo JS -->
+          </ul>
+        </div>
+      </div>
     </main>
 
     <footer>
